--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -2,11 +2,11 @@
 @font-face {
 	font-family: 'be-vietnam-pro';
 	font-style: normal;
-	font-weight: 500; /* Replaces `Regular` or `400` */
+	font-weight: 400;
 	src: 
-		local('Be Vietnam Pro Medium'),
-		local('BeVietnamPro-Medium'),
-		url(../fonts/be-vietnam-pro/be-vietnam-pro-500.woff2) format('font/woff2');
+		local('Be Vietnam Pro Regular'),
+		local('BeVietnamPro-Regular'),
+		url(../fonts/be-vietnam-pro/be-vietnam-pro-400.woff2) format('font/woff2');
 }
 
 @font-face {
@@ -22,7 +22,6 @@
 html {
 	font-family: 'be-vietnam-pro', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	font-size: 100%;
-	font-weight: 500; /* Set the document's default font-weight to the `Medium` weight */
 }
 
 input,
