--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,5 @@
 @import "./fonts.css";
-
-body {
-  background-color: red;
-}
+@import "./constants.css";
+@import "./defaults.css";
+@import "./icons.css";
+@import "./patterns/buttons.css";
