Move to token-based border-radius, box-shadows, etc

--- a/src/css/constants/colours.css
+++ b/src/css/constants/colours.css
@@ -5,9 +5,12 @@ html {
 	--color-black-950: hsla(0, 3%, 6%, 1);
 	--color-black-200: hsla(0, 0%, 60%, 1);
 	--color-text-title: hsla(30, 4%, 11%, 1);
-	--color-surface-darker: hsla(16, 26%, 17%, 1);
 	--color-greyscale-text: hsla(60, 5%, 96%, 1);
+	--color-surface-darker: hsla(16, 26%, 17%, 1);
 	--color-surface-subtitle: var(--color-greyscale-text);
+	--color-surface-lighter: hsla(60, 5%, 96%, 1);
 	--color-border-default: hsla(16, 27%, 28%, 1);
+	--color-border-subtle: hsla(18, 28%, 93%, 1);
+	--color-border-lighter: hsla(17, 27%, 71%, 1);
 	--color-transparent: hsla(0, 0%, 0%, 0);
 }
