--- a/src/css/constants/colours.css
+++ b/src/css/constants/colours.css
@@ -4,12 +4,14 @@ html {
 	--color-brown-600: hsla(16, 27%, 22%, 1);
 	--color-black-950: hsla(0, 3%, 6%, 1);
 	--color-black-200: hsla(0, 0%, 60%, 1);
+	--color-yellow-100: hsla(54, 100%, 90%, 1);
 	--color-text-title: hsla(30, 4%, 11%, 1);
 	--color-text-label: var(--color-text-title);
 	--color-greyscale-text: hsla(60, 5%, 96%, 1);
 	--color-greyscale-text-caption: hsla(24, 5%, 57%, 1);
-	--color-surface-darker: hsla(16, 26%, 17%, 1);
+	--color-surface-darker: hsla(16, 26%, 17%, 1); /* This has changed */
 	--color-surface-subtitle: var(--color-greyscale-text);
+	--color-surface-subtle: hsla(18, 28%, 93%, 1);
 	--color-surface-lighter: hsla(60, 5%, 96%, 1);
 	--color-border-default: hsla(16, 27%, 28%, 1);
 	--color-border-subtle: hsla(18, 28%, 93%, 1);
