--- a/src/css/patterns/card.css
+++ b/src/css/patterns/card.css
@@ -47,6 +47,10 @@ a.card:hover {
 	margin-inline-end: calc(var(--card-padding-inline) * -1);
 }
 
+.card[data-mode="image"] > picture:only-child {
+	margin-block-end: calc(var(--card-padding-block) * -1);
+}
+
 .card[data-mode="product"] {
 	--card-padding-block: 1.25rem;
 	--card-padding-inline: 1.25rem;
